profiles: Correct CPU governor settings
First, always prefer schedutil for balanced/powersave. On platforms
where this governor is available, this enables Energy-Aware-Scheduling
which offers the best power efficiency and performance combination.
There is absolutely no reason to use another governor by default in the
"balanced" profile on these systems, in particular.

Second, swap around "conservative" and "ondemand". "conservative" is
supposed to be lower power and higher latency. The commit that made this
change [1] tested on a single server platform (10 years ago), but came
to the wrong conclusion. Dividing the throughput by power numbers of
that commit, "conservative" did in fact provide better performance/watt,
which is the intent of lower-power modes. The fact that it also
happened to provide better overall performance than "ondemand" is
probably an artifact of suboptimal power-management behavior or a
flawed test.

[1] https://github.com/redhat-performance/tuned/commit/b2897d9c1cfea9880bd64660bf519bdf04117f9c

Signed-off-by: Hector Martin <marcan@marcan.st>

--- a/profiles/balanced/tuned.conf
+++ b/profiles/balanced/tuned.conf
@@ -10,7 +10,7 @@ cpufreq_conservative=+r
 
 [cpu]
 priority=10
-governor=conservative|powersave
+governor=schedutil|ondemand|powersave
 energy_perf_bias=normal
 energy_performance_preference=balance_performance
 boost=1
