--- a/profiles/powersave/tuned.conf
+++ b/profiles/powersave/tuned.conf
@@ -6,7 +6,7 @@
 summary=Optimize for low power consumption
 
 [cpu]
-governor=ondemand|powersave
+governor=schedutil|conservative|powersave
 energy_perf_bias=powersave|power
 energy_performance_preference=power
 boost=0
