vm: Deprecate dirty_ratio in favour of dirty_bytes with %
Same for dirty_background_ratio and dirty_background_bytes.

Using both the ratio and the bytes is not compatible with
the current profile inheritance implementation, because it
is not possible for dirty_bytes in a child profile to override
dirty_ratio in its parent profile.

Resolves: RHEL-101578

--- a/profiles/latency-performance/tuned.conf
+++ b/profiles/latency-performance/tuned.conf
@@ -22,11 +22,11 @@ platform_profile=performance
 #
 # The generator of dirty data starts writeback at this percentage (system default
 # is 20%)
-dirty_ratio=10
+dirty_bytes=10%
 
 # Start background writeback (via writeback threads) at this percentage (system
 # default is 10%)
-dirty_background_ratio=3
+dirty_background_bytes=3%
 
 [sysctl]
 # The swappiness parameter controls the tendency of the kernel to move
