--- a/profiles/mssql/tuned.conf
+++ b/profiles/mssql/tuned.conf
@@ -12,8 +12,8 @@ force_latency=5
 [vm]
 # For multi-instance SQL deployments use 'madvise' instead of 'always'
 transparent_hugepages=always
-dirty_background_ratio=3
-dirty_ratio=80
+dirty_background_bytes=3%
+dirty_bytes=80%
 
 [sysctl]
 vm.swappiness=1
