--- a/profiles/oracle/tuned.conf
+++ b/profiles/oracle/tuned.conf
@@ -25,6 +25,6 @@ kernel.panic_on_oops = 1
 kernel.numa_balancing = 0
 
 [vm]
-dirty_background_ratio = 3
-dirty_ratio = 40
+dirty_background_bytes = 3%
+dirty_bytes = 40%
 transparent_hugepages=never
