--- a/profiles/sap-hana/tuned.conf
+++ b/profiles/sap-hana/tuned.conf
@@ -13,8 +13,8 @@ min_perf_pct=100
 
 [vm]
 transparent_hugepages=madvise
-dirty_ratio = 40
-dirty_background_ratio = 10
+dirty_bytes = 40%
+dirty_background_bytes = 10%
 
 [sysctl]
 kernel.sem = 32000 1024000000 500 32000
