--- a/profiles/virtual-guest/tuned.conf
+++ b/profiles/virtual-guest/tuned.conf
@@ -14,7 +14,7 @@ include=throughput-performance
 #
 # The generator of dirty data starts writeback at this percentage (system default
 # is 20%)
-dirty_ratio = 30
+dirty_bytes = 30%
 
 [sysctl]
 # Filesystem I/O is usually much more efficient than swapping, so try to keep
