--- a/profiles/virtual-host/tuned.conf
+++ b/profiles/virtual-host/tuned.conf
@@ -9,7 +9,7 @@ include=throughput-performance
 [vm]
 # Start background writeback (via writeback threads) at this percentage (system
 # default is 10%)
-dirty_background_ratio = 5
+dirty_background_bytes = 5%
 
 [cpu]
 # Setting C3 state sleep mode/power savings
