--- a/profiles/accelerator-performance/tuned.conf
+++ b/profiles/accelerator-performance/tuned.conf
@@ -25,11 +25,11 @@ readahead=>4096
 #
 # The generator of dirty data starts writeback at this percentage (system default
 # is 20%)
-dirty_ratio = 40
+dirty_bytes = 40%
 
 # Start background writeback (via writeback threads) at this percentage (system
 # default is 10%)
-dirty_background_ratio = 10
+dirty_background_bytes = 10%
 
 [sysctl]
 # PID allocation wrap value.  When the kernel's next PID value
