--- a/profiles/spectrumscale-ece/tuned.conf
+++ b/profiles/spectrumscale-ece/tuned.conf
@@ -12,8 +12,8 @@ energy_perf_bias=performance
 min_perf_pct=100
 
 [vm]
-dirty_ratio = 40
-dirty_background_ratio = 10
+dirty_bytes = 40%
+dirty_background_bytes = 10%
 
 [sysctl]
 kernel.numa_balancing = 1
