--- a/tuned/ppd/tuned-ppd.service
+++ b/tuned/ppd/tuned-ppd.service
@@ -8,7 +8,7 @@ Before=multi-user.target display-manager.target
 Type=dbus
 BusName=org.freedesktop.UPower.PowerProfiles
 BusName=net.hadess.PowerProfiles
-ExecStart=/usr/sbin/tuned-ppd -l
+ExecStart=/usr/sbin/tuned-ppd
 
 [Install]
 WantedBy=graphical.target
