--- a/profiles/sap-hana/tuned.conf
+++ b/profiles/sap-hana/tuned.conf
@@ -10,6 +10,7 @@ force_latency=cstate.id_no_zero:3|70
 governor=performance
 energy_perf_bias=performance
 min_perf_pct=100
+boost=1
 
 [vm]
 transparent_hugepages=madvise
