openshift: include network-throughput profile
Update network-throughput profile and drop now duplicate tuning from
the openshift profile. Follows up the #809 and cleans the things a bit.

Signed-off-by: Jaroslav Škarvada <jskarvad@redhat.com>

--- a/profiles/network-throughput/tuned.conf
+++ b/profiles/network-throughput/tuned.conf
@@ -7,6 +7,10 @@ summary=Optimize for streaming network throughput, generally only necessary on o
 include=throughput-performance
 
 [sysctl]
+# Sets tcp_notsent_lowat to a value intended to balance throughput and latency while limiting total socket memory usage.
+net.ipv4.tcp_notsent_lowat=131072
+# Disables slow start after a connection has been idle, allowing immediate maximum throughput upon resuming data transfer.
+net.ipv4.tcp_slow_start_after_idle=0
 # Increase kernel buffer size maximums.  Currently this seems only necessary at 40Gb speeds.
 #
 # The buffer tuning values below do not account for any potential hugepage allocation.
